[package]
name = "blua"
version = "0.0.1-rc1"
edition = "2021"
authors = ["Malek"]
license = "MIT OR Apache-2.0"
description = "bevy lua integration for doing systems in lua"
repository = "https://github.com/MalekiRe/blua"

[dependencies]
bevy = "0.15.0-rc.2"
piccolo = "0.3.3"
flume = "0.11.1"
send_wrapper = "0.6.0"
anyhow = "1.0.92"